Fixing table appearance on mobile viewports
On narrow mobile viewports, tables on the "Wave File Format" page
should overflow the page in a scrollable container. Otherwise, the
content becomes very cramped and hard to read.

2734cc26412baa5501f48841711792d1aafa19d2 inadvertantly broke this
behavior by clamping the table width to the page width and preventing
overflow, but this commit restores the correct behavior.

--- a/wavefile.css
+++ b/wavefile.css
@@ -92,15 +92,26 @@ ul.audio-list li audio {
 table {
   border-collapse: collapse;
   width: 100%;
+  white-space: nowrap;
 }
 
 th {
   text-align: left;
   border-bottom: 2px solid #ddd;
+  padding-right: 1.5rem;
+}
+
+th:last-child {
+  padding-right: 0;
 }
 
 td {
   vertical-align: top;
+  padding-right: 1.5rem;
+}
+
+td:last-child {
+  padding-right: 0;
 }
 
 span.highlight {
